# Python

./: .gitignore  Churn_Fun.ipynb  Churn_Fun.py  DataScienceTutorial.ipynb  DataScienceTutorial.py  data_explorer.py
.devcontainer/: devcontainer.json
data_exploration/: README.md
deploy_ML_model_Docker/: README.md  pyproject.toml  requirements.txt
