[tool.poetry]
name = "Model_Deployment"
version = "1.0"
description = ""
authors = ["csjp"]
license = ""
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
unicorn = "^2.1.1"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
